Fix margin on safari

--- a/src/style.css
+++ b/src/style.css
@@ -48,6 +48,7 @@ body {
   background-color: var(--onyx);
   color: var(--cultured);
   padding: 0.5rem;
+  margin: 0;
 }
 
 #search-container input[type='search']::placeholder {
